--- a/Operator Overloading/Operator Overloading.vcxproj
+++ b/Operator Overloading/Operator Overloading.vcxproj
@@ -139,10 +139,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="op_overload_main.cpp" />
+    <ClCompile Include="number.cpp" />
+    <ClCompile Include="overload_main.cpp" />
     <ClCompile Include="string.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="number.h" />
     <ClInclude Include="string.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
