--- a/Operator Overloading/Operator Overloading.vcxproj.filters
+++ b/Operator Overloading/Operator Overloading.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="number.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="controller.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="string.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="number.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="controller.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
