--- a/Constructors/Constructors.vcxproj
+++ b/Constructors/Constructors.vcxproj
@@ -21,9 +21,10 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{521fc9a3-7666-4f73-b3cd-b70ec997155c}</ProjectGuid>
-    <RootNamespace>Hackerrank</RootNamespace>
+    <ProjectGuid>{cd95ed47-c0e1-4ef1-81de-d1d37aacaf67}</ProjectGuid>
+    <RootNamespace>Constructors</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Garage Manager</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -104,6 +105,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -127,25 +129,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Classes.hpp" />
-    <ClInclude Include="Introduction.hpp" />
-    <ClInclude Include="Fundamentals.hpp" />
-    <ClInclude Include="STL.hpp" />
-    <ClInclude Include="Strings.hpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="Classes.cpp" />
-    <ClCompile Include="Introduction.cpp" />
+    <ClCompile Include="Car.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Fundamentals.cpp" />
-    <ClCompile Include="STL.cpp" />
-    <ClCompile Include="Strings.cpp" />
+    <ClCompile Include="Garage.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="AttributeParser.txt" />
-    <Text Include="FindThePoint.txt" />
-    <Text Include="vector.txt" />
-    <Text Include="Maps_STL.txt" />
+    <ClInclude Include="Car.hpp" />
+    <ClInclude Include="Garage.hpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="cars.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
