--- a/Printing/Printing.vcxproj
+++ b/Printing/Printing.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{521fc9a3-7666-4f73-b3cd-b70ec997155c}</ProjectGuid>
-    <RootNamespace>Hackerrank</RootNamespace>
+    <ProjectGuid>{b945559d-3dc8-4da8-b4c5-d4bdd2fb2510}</ProjectGuid>
+    <RootNamespace>Printing</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -128,27 +128,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Classes.hpp" />
-    <ClInclude Include="Introduction.hpp" />
-    <ClInclude Include="Fundamentals.hpp" />
-    <ClInclude Include="OtherConcepts.hpp" />
-    <ClInclude Include="STL.hpp" />
-    <ClInclude Include="Strings.hpp" />
+    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Printing.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Classes.cpp" />
-    <ClCompile Include="Introduction.cpp" />
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="Fundamentals.cpp" />
-    <ClCompile Include="OtherConcepts.cpp" />
-    <ClCompile Include="STL.cpp" />
-    <ClCompile Include="Strings.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <Text Include="AttributeParser.txt" />
-    <Text Include="FindThePoint.txt" />
-    <Text Include="vector.txt" />
-    <Text Include="Maps_STL.txt" />
+    <ClInclude Include="Printing.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
